# Coach-nono

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  acc-coach-roadmap.md  docker-compose.yml  scripts.ps1  thresholds.example.json
.claude/skills/nono-commit/: SKILL.md
.claude/skills/nono-desktop-shortcut/: SKILL.md
.github/: dependabot.yml
capture/: ROBUST_CAPTURE_PLAN.md  capture_agent.py  health.py  install_service.ps1  logging_setup.py  notify.py  recover_failed_laps.py  recovery.py  requirements.txt  run_capture.ps1  status.ps1  tray_icon.py  uninstall_service.ps1  watch_laps.ps1  watchdog.ps1
db/init/: 01_schema.sql  02_extras.sql  03_corners.sql  04_tyre_laps.sql
scripts/: backfill_tyre_laps.py  scan_secrets.ps1
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/coach/: align.py  config.py  dashboard.py  dashboard_v2.py  db.py  delta.py  ingest.py  inputs.py  process.py  schema.py  setups.py  sweep_service.py
services/pipeline/coach/analysis/: coach_text.py  corners.py  db_ops.py  findings.py  setup_advisor.py  tyre_ops.py
services/pipeline/coach/sources/: acc.py  base.py
