[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "acc-coach"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # DB
    "psycopg2-binary>=2.9",
    # Data / parquet
    "pyarrow>=15.0",
    "pandas>=2.2",
    "numpy>=1.26",
    # Signal processing (align, delta)
    "scipy>=1.13",
    # File watching (ingest)
    "watchdog>=4.0",
    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.22",
    # HTTP (Ollama)
    "httpx>=0.27",
    # Config
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["coach*"]
